# Numpad-Tray-Windows

./: .gitignore  CMakeLists.txt  README.md  app.manifest  resources.rc
.github/workflows/: release.yml
include/: hotkeys.h  numpad.h
src/: button.cpp  config.cpp  hotkeys.cpp  main.cpp  popup.cpp
